--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,7 +24,7 @@
         android:networkSecurityConfig="@xml/connect"
         android:usesCleartextTraffic="true">
         <activity
-            android:name=".MainActivity"
+            android:name=".Main"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -32,6 +32,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".CauseActivity" />
+        <activity android:name=".AddActivity" />
+        <activity android:name=".Prevention" />
+        <activity android:name=".ProductsActivity" />
+        <activity android:name=".SymptonsActivity" />
     </application>
 
 </manifest>
