--- a/requirements.txt
+++ b/requirements.txt
@@ -9,12 +9,15 @@ colorama==0.4.6
 contourpy==1.2.1
 cycler==0.12.1
 filelock==3.15.4
+Flask==3.0.3
+Flask-Cors==4.0.1
 fonttools==4.53.1
 fsspec==2024.6.1
 gitdb==4.0.11
 GitPython==3.1.43
 idna==3.7
 intel-openmp==2021.4.0
+itsdangerous==2.2.0
 Jinja2==3.1.4
 joblib==1.4.2
 jsonschema==4.23.0
@@ -61,4 +64,5 @@ typing_extensions==4.12.2
 tzdata==2024.1
 urllib3==2.2.2
 watchdog==4.0.2
+Werkzeug==3.0.4
 wheel==0.44.0
