--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -38,6 +38,7 @@
         <activity android:name=".ProductsActivity" />
         <activity android:name=".SymptonsActivity" />
         <activity android:name=".MainActivity" />
+        <activity android:name=".AddActivity" />
     </application>
 
 </manifest>
